Bug 141158 - FILEOPEN DOCX Hidden first/even header not imported
Summary: FILEOPEN DOCX Hidden first/even header not imported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Attila Bakos (NISZ)
URL:
Whiteboard: target:7.2.0
Keywords: filter:docx
: 121834 (view as bug list)
Depends on:
Blocks: DOCX-Header-Footer
  Show dependency treegraph
 
Reported: 2021-03-22 08:02 UTC by NISZ LibreOffice Team
Modified: 2022-03-02 10:40 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
attachment #84234 in Writer after disabling “Same content on left and right pages” and “Same content on first page” (90.64 KB, image/png)
2021-03-22 08:02 UTC, NISZ LibreOffice Team
Details
attachment #84234 in Word after enabling “First page different” and “Even/odd different” (59.15 KB, image/png)
2021-03-22 08:03 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-03-22 08:02:48 UTC
Created attachment 170617 [details]
attachment #84234 in Writer after disabling “Same content on left and right pages” and “Same content on first page”

This is the import side of bug #69635
When attachment #84234 is opened and the first/even headers are enabled, their Word-made content does not show up in the document, unlike in Word.

Steps to reproduce:
    1. Open attachment #84234
    2. Open Format – Page Style
    3. On the Header and the Footer tabs disable the “Same content on left and right pages” and “Same content on first page” boxes.

Actual results:
Header and footer content does not change.

Expected results:
First pages header/footer should become red “First header” / “First footer” text.
Second pages header/footer should become green “Even header” / “Even footer” text.
Third pages header/footer should stay the blue “Odd header” / “Odd footer” text.
This would match Words behavior.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 9d8accf03984a64a4105826e55b221962628eb93
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-GB
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-03-22 08:03:43 UTC
Created attachment 170618 [details]
attachment #84234 in Word after enabling “First page different” and “Even/odd different”
Comment 2 Commit Notification 2021-03-31 12:45:41 UTC
Attila Bakos (NISZ) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b802ab694a8a7357d4657f3e11b571144fa7c7bf

tdf#141158 DOCX: import discarded headers/footers

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2021-04-07 14:30:50 UTC
Verified in: 

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ea4fb1559f7b99a0bfaf18f26cb3b6972c9cde1c
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 4 NISZ LibreOffice Team 2021-05-20 09:55:16 UTC
*** Bug 121834 has been marked as a duplicate of this bug. ***