tdf#141158 Sw: Import discarded docx headers/footers

Before the hidden OOXML headers/footers lost
during import time. Now it can be restored after
import in Writer having the feadture to have
a choice of the hidden and original headers and
footers as well. This is for improving of the
interoperability between other Office programs
and the Writer. Hopefully it will be usefull.

To start the py-UItest run:
$ make UITest_writer_tests7 UITEST_TEST_NAME=
"tdf141158.TestTdf141158.test_tdf141158"

Co-developed-with: Daniel Arato (NISZ)

Note: In spite of this patch implements the
left/first/firstleft page header/footer stash
at import time, the left one works corretly at now.
This is because the first pages have different
page styles so changing the right page style will
restore the hidden header/footer content.
For this problem futher improvements are planned,
exactly in the filter part. Number of unit tests
had to be modified, because before theese headers
and footers were dropped.

Change-Id: I3dd452a648bc465710698707c083734dc762ed94